Fixed some spacings, removed some properties that are not used and changed some properties into the appropriate properties that should be used insted.

--- a/scss/_quotes_section.scss
+++ b/scss/_quotes_section.scss
@@ -91,7 +91,7 @@
 
     .quotes__main_part {
         max-width: 437px;
-        padding-block-start: 303px;
+        margin-block-start: 303px;
     }
 
     .quotes__bttn {
@@ -100,11 +100,11 @@
     }
 
     .quotes__writers {
-        padding-block-start: 160px;
+        margin-block-start: 160px;
     }
 
     .quotes__navigation_container {
-        padding-block-end: 148px;
+        margin-block-end: 148px;
     }
 
     .quotes__lists_item {
@@ -120,8 +120,8 @@
 
     .quotes__lists_item--aaron {
         margin-inline-start: 105px;
-        margin-block-end: 0;
-        margin-inline-end: 40px;
+        // margin-block-end: 0;
+        // margin-inline-end: 40px;
     }
 
 }
